Fixed navbar gap

--- a/web/styles.scss
+++ b/web/styles.scss
@@ -11,7 +11,8 @@ body {
         padding: 0;
     }
 }
-
+html, body{margin:0;n"
+}
 
 .spinner
 {
